--- a/css/style.scss
+++ b/css/style.scss
@@ -1,6 +1,6 @@
 @use "./base/reset";
 @use "./base/extends";
-@use "./base/fonts";
+@use "./base/fonts" as *;
 @use "./base/mixins" as *;
 @use "./base/variables" as *;
 @use "./icons/icons";
@@ -10,8 +10,7 @@ body {
 }
 
 ::placeholder {
-  color: white;
-  opacity: 1;
+  color: rgba($white, 0.6);
 }
 
 main {
@@ -25,48 +24,85 @@ main {
   min-height: 75px;
   margin-bottom: 20px;
   padding: 19px;
-  padding-right: 62px;
   position: relative;
-  input {
+  &__input {
+    @include font;
     background-color: #65c4ae;
-    color: white;
-    width: 100%;
-    border-style: none;
-
-    height: 64px;
-    padding-left: 17px;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
+    width: calc(100% - 32.5px);
+    border-width: 0px;
+    height: 65px;
+    padding-left: 25px;
+    padding-right: 57.5px;
+    border-radius: 7px 0 0 7px;
+    outline: none;
   }
-  button {
+  &__submit {
     position: absolute;
     width: 66px;
     height: 66px;
     border-radius: 50px;
-    right: 30px;
-    border: none;
+    right: 20px;
+    top: 20px;
+    border-width: 0;
+    cursor: pointer;
   }
-  
-  button::after {
-    height: 50px;
-    width: 50px;
+  &:after {
+    position: absolute;
     font-family: icons;
     content: "\e000";
     color: $green;
+    font-size: 25px;
+    top: 40px;
+    right: 40px;
   }
-}
-
-form input {
+  &--error {
+    .form__input {
+      background-color: red;
+    }
+    .form__submit {
+      cursor: not-allowed;
+    }
+  }
 }
 
 .list {
   &__item {
+    display: flex;
     min-height: 20px;
     background-color: $white;
+    margin: 0 auto;
     margin-bottom: 12px;
-    span,
-    button {
-      display: none;
+    width: 90%;
+    padding: 25px;
+    border-radius: 6px;
+    box-shadow: 1px 1px #ecedef;
+    &__text {
+      @include font(20, 20px, $black);
+      display: block;
+      width: 350px;
+      margin-right: 20px;
+    }
+    &__button {
+      border: none;
+      background: transparent;
+      font-family: icons;
+      font-size: 20px;
+      cursor: pointer;
+      &--remove {
+        &::after {
+          content: "\e001";
+          color: #dde2e1;
+          border-right: 1px solid #dde2e1;
+          padding-right: 17px;
+        }
+      }
+      &--removed {
+        color: $red;
+      }
+      &--check::after {
+        content: "\e002";
+        color: $green;
+      }
     }
   }
 }
